refactor: simplify PostItemEsService via code-simplifier agent
Applied code-simplifier analysis:
- Replace @Autowired field injection with @RequiredArgsConstructor (Spring best practice)
- Replace Collectors.toList() with .toList() (Java 16+)
- Replace imperative filter loop with Stream.filter()
- Replace new ArrayList<>() with List.of() for empty immutable list
- Use var for obvious local variable types (Java 10+)

All public API signatures and behavior preserved.

https://claude.ai/code/session_0189VQWyfGpR9pPBF9XxtrZH